--- a/tests/Test.ipynb
+++ b/tests/Test.ipynb
@@ -15,7 +15,7 @@
     "from scipy.stats import skew\n",
     "from p_tools import p_stats\n",
     "from scipy.stats.mstats import mquantiles\n",
-    "import mikeio\n",
+    "import mikeio_DHI\n",
     "from matplotlib.transforms import Bbox"
    ]
   },
